# RepoLens

./: .gitattributes  .gitignore  AGENTS.md  CODEX.md  LICENSE  Makefile  README.md  pyproject.toml
.agent/: PLANS.md
.agent/plans/: m1-1-repository-scanner.md  m1-2a-python-definitions.md  m1-2b-python-import-facts.md  m1-3a-repository-graph-assembly.md  m1-3b-cli-graph-json.md  m1-4a-markdown-extraction.md  m1-4b-project-metadata.md  m1-5-acceptance-closeout.md  m2-1a-tree-sitter-js-ts-foundation.md  m2-1b-commonjs-reexports-typescript-declarations.md  m2-2a-jsx-tsx-react-components.md  m2-2b-bounded-js-family-call-facts.md  m2-complete-closeout.md
.github/workflows/: ci.yml
docs/: DESIGN_SUMMARY.md  INTERVIEW_QUESTIONS.md  REFERENCE_ANALYSIS.md
harness/: README.md
harness/fixtures/ambiguous_resolution_cases/: gold.json  manifest.json  questions.jsonl
harness/fixtures/fullstack_fastapi_react/: gold.json  m1-graph.json  manifest.json  questions.jsonl
harness/fixtures/python_service/: gold.json  (+3 more)
scripts/: update_m1_acceptance_gold.py  update_m2_1b_acceptance_gold.py  update_m2_2a_acceptance_gold.py  update_m2_2b_acceptance_gold.py
src/repolens/: __init__.py  cli.py  config.py  ids.py  indexer.py  models.py  scanner.py
tests/: test_cli.py  test_evaluation_schemas.py  test_extractors.py  test_ids.py  test_indexer.py  test_javascript_typescript_extractor.py  test_js_family_call_facts.py  test_jsx_tsx_react_components.py  test_markdown_extractor.py  test_metadata_extractor.py  test_metrics.py  test_milestone1_acceptance.py  test_models.py  test_scanner.py
(+64 files in other folders)
